# facility-repair-agent

./: .env  .env.example  CLAUDE.md  README.md  docker-compose.yml  修改方案.md  详细设计.md  说明文档.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py
backend/app/agent/: core.py  prompts.py  state.py  ticket_builder.py
backend/app/api/v1/: __init__.py  chat.py  ticket.py  upload.py
backend/app/models/: api_models.py
backend/app/services/: llm.py  rag.py  storage.py
backend/data/: CIP7867.csv
backend/scripts/: cleaner.py  embedder.py  ingest_tickets.py
docs/: plan-area-refactor.md  workflow-analysis.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: repair-agent.ts  types.ts
frontend/src/components/: chat-panel.ts  fab-button.ts  input-bar.ts  message-bubble.ts  message-list.ts
frontend/src/services/: api.ts  image-compress.ts  speech.ts  sse-parser.ts
frontend/src/stores/: chat-store.ts
frontend/src/styles/: theme.ts
