[project]
name = "facility-repair-agent"
version = "0.1.0"
description = "企业设施报修 Agent 后端服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "openai>=1.51.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "sse-starlette>=2.1.3",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "minio>=7.2.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
